# picmi-legacy

./: .gitignore  CMakeLists.txt  GB_AudioSystem.cpp  GB_AudioSystem.h  GB_Backgrounds.cpp  GB_Backgrounds.h  GB_Collision.cpp  GB_Collision.h  GB_Definitions.h  GB_Events.cpp  GB_Events.h  GB_GameInfo.cpp  GB_GameInfo.h  GB_Globals.h  GB_Music.cpp  GB_Music.h  GB_Sounds.cpp  GB_Sounds.h  GB_Sprites.cpp  GB_Sprites.h  GB_System.cpp  GB_System.h  GB_TextEngine.cpp  GB_TextEngine.h  GB_VideoSystem.cpp  GB_VideoSystem.h  Game.cpp  Game.h  GameBlade.h  INSTALL  Levels.cpp  Makefile  PKGBUILD  PicrossException.cpp  PicrossException.h  Point.cpp  Point.h  Puzzle.cpp  Puzzle.h  README  (+13 more)
gfx/: cell.xcf
src/: b_boardgame.cpp  b_boardgame.h  b_boardsettings.cpp  b_boardsettings.h  b_draghelper.cpp  b_draghelper.h  b_enums.h  b_exception.cpp  b_exception.h  b_gamemanager.cpp  b_gamemanager.h  b_inputhandler.h  b_painter.cpp  b_painter.h  b_picdefines.h  b_picexception.cpp  b_picexception.h  b_picinputhandler.cpp  b_picinputhandler.h  b_picpainter.cpp  b_picpainter.h  b_picpngloader.cpp  b_picpngloader.h  b_picpoint.cpp  b_picpoint.h  b_picross.cpp  b_picross.h  b_picsettings.cpp  b_picsettings.h  b_picstatselement.cpp  b_picstatselement.h  b_picstreak.cpp  b_picstreak.h  b_pictimer.cpp  b_pictimer.h  b_point.cpp  b_point.h  b_sdlsprite.cpp  b_sdlsprite.h  b_sdltext.cpp  (+64 more)
